--- a/src/app/components/forms/newEmail/newEmailForm.module.scss
+++ b/src/app/components/forms/newEmail/newEmailForm.module.scss
@@ -1,3 +1,23 @@
 .rte-wrapper {
 	position: relative;
 }
+
+.input-group {
+	display: flex;
+	flex-direction: column;
+	height: 1.25rem;
+
+	.input {
+		display: flex;
+		align-items: center;
+		gap: 0.5rem;
+	}
+
+	.contact-select {
+		border: 1px solid #767676;
+		padding: 0 0.25rem;
+		border-radius: 3px;
+		height: 100%;
+		cursor: pointer;
+	}
+}
