--- a/src/app/dashboard/contacts/contacts.module.scss
+++ b/src/app/dashboard/contacts/contacts.module.scss
@@ -1,18 +1,75 @@
-.header-section {
-	text-align: center;
+.page-wrapper {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 
-	.welcomeTitle {
-		font-size: 2.5rem;
-		font-weight: 700;
-		background: var(--gradient-primary);
-		-webkit-background-clip: text;
-		-webkit-text-fill-color: transparent;
-		background-clip: text;
-		margin-bottom: 0.5rem;
+	.header-section {
+		text-align: center;
+
+		.welcomeTitle {
+			font-size: 2.5rem;
+			font-weight: 700;
+			background: var(--gradient-primary);
+			-webkit-background-clip: text;
+			-webkit-text-fill-color: transparent;
+			background-clip: text;
+			margin-bottom: 0.5rem;
+		}
+
+		.welcomeSubtitle {
+			color: var(--text-secondary);
+			font-size: 1.2rem;
+		}
 	}
 
-	.welcomeSubtitle {
-		color: var(--text-secondary);
-		font-size: 1.2rem;
+	.contacts-actions {
+		margin-top: 1rem;
+		display: flex;
+		align-items: center;
+		gap: 1rem;
+
+		.search-bar {
+		}
+
+		.add-contact {
+			.add-contact-button {
+				height: 3rem;
+				display: flex;
+				align-items: center;
+				justify-content: center;
+				gap: 0.5rem;
+				padding: 0.25rem 1rem;
+				font-size: 1.125rem;
+				color: var(--text-secondary);
+				transition: all 0.2s ease-in-out;
+				font-weight: 500;
+				position: relative;
+				border-radius: var(--border-radius);
+				border: 2px solid transparent;
+				background: linear-gradient(
+							var(--background-secondary),
+							var(--background-secondary)
+						)
+						padding-box,
+					var(--gradient-primary) border-box;
+				box-shadow: 0.25rem 0.25rem 1rem rgba(0, 0, 0, 0.25);
+				cursor: pointer;
+				white-space: nowrap;
+
+				span {
+					line-height: 0;
+				}
+
+				@media (hover: hover) {
+					&:hover {
+						transform: translateY(-0.125rem);
+						box-shadow: 0.375rem 0.375rem 1.5rem rgba(0, 0, 0, 0.25);
+						color: var(--color-primary);
+						background: var(--gradient-accessible) padding-box,
+							var(--gradient-primary) border-box;
+					}
+				}
+			}
+		}
 	}
 }
