changes to how new contact modal operate

--- a/src/app/components/modal/modal.module.scss
+++ b/src/app/components/modal/modal.module.scss
@@ -33,7 +33,7 @@
 			right: 0;
 			bottom: 0;
 			border-radius: var(--border-radius);
-			box-shadow: var(--shadow-inset);
+			// box-shadow: var(--shadow-inset);
 			pointer-events: none;
 		}
 
