--- a/src/app/components/modal/modalTypes/contacts/newContactModal.module.scss
+++ b/src/app/components/modal/modalTypes/contacts/newContactModal.module.scss
@@ -64,6 +64,10 @@
 				font-style: italic;
 			}
 
+			.field-updated {
+				border-color: var(--accent-primary);
+			}
+
 			select {
 				cursor: pointer;
 
@@ -77,6 +81,11 @@
 				color: #ef4444;
 				margin-top: 0.25rem;
 			}
+		}
+
+		.error-duplicate {
+			text-align: center;
+			color: #ef4444;
 		}
 
 		.form-actions {
