skeleton of contact search modal created

--- a/src/app/components/modal/modal.module.scss
+++ b/src/app/components/modal/modal.module.scss
@@ -11,7 +11,7 @@
 
 	.modalContainer {
 		width: auto;
-		max-width: 31.25rem;
+		// max-width: 31.25rem;
 		display: flex;
 		flex-direction: column;
 		align-items: center;
