--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -22,6 +22,12 @@
 		hsla(187, 92%, 69%, 0.5) 50%,
 		hsla(156, 72%, 67%, 0.5) 100%
 	);
+	--gradient-primary-lighter: linear-gradient(
+		135deg,
+		hsla(188, 86%, 53%, 0.25) 0%,
+		hsla(187, 92%, 69%, 0.25) 50%,
+		hsla(156, 72%, 67%, 0.25) 100%
+	);
 	--gradient-secondary: linear-gradient(135deg, #06b6d4 0%, #22d3ee 100%);
 	--gradient-subtle: linear-gradient(135deg, #f0fdff 0%, #f0fdf4 100%);
 	--gradient-accessible: linear-gradient(135deg, #cffafe 0%, #d1fae5 100%);
