buttons moved to component folder, hooks replaced with tanstack react query

--- a/src/app/components/modal/modalTypes/contacts/newContactModal.module.scss
+++ b/src/app/components/modal/modalTypes/contacts/newContactModal.module.scss
@@ -132,6 +132,7 @@
 				cursor: pointer;
 				transition: all 0.2s ease;
 				box-shadow: var(--shadow-sm);
+				overflow: hidden;
 
 				&::before {
 					content: '';
