reworked routes with helpers and now handle active sequences

--- a/src/app/components/modal/modal.module.scss
+++ b/src/app/components/modal/modal.module.scss
@@ -23,6 +23,7 @@
 		border: 0.0625rem solid var(--border-light);
 		position: relative;
 		transition: all 0.3s ease;
+		line-height: 1.25;
 
 		/* Inset shadow for depth */
 		&::after {
