--- a/src/app/components/modal/modalTypes/error/errorModal.module.scss
+++ b/src/app/components/modal/modalTypes/error/errorModal.module.scss
@@ -14,4 +14,17 @@
 		margin-bottom: 1.5rem;
 		font-size: 1.25rem;
 	}
+
+	.buttons {
+		display: flex;
+		gap: 1.5rem;
+	}
+
+	.message {
+		display: flex;
+		flex-direction: column;
+		gap: 1rem;
+		font-size: 1.25rem;
+		margin-bottom: 1.5rem;
+	}
 }
