--- a/src/app/dashboard/contacts/contacts.module.scss
+++ b/src/app/dashboard/contacts/contacts.module.scss
@@ -14,6 +14,7 @@
 			-webkit-text-fill-color: transparent;
 			background-clip: text;
 			margin-bottom: 0.5rem;
+			line-height: 1.5;
 		}
 
 		.welcomeSubtitle {
