--- a/src/app/dashboard/new-email/newEmail.module.scss
+++ b/src/app/dashboard/new-email/newEmail.module.scss
@@ -14,6 +14,7 @@
 			-webkit-text-fill-color: transparent;
 			background-clip: text;
 			margin-bottom: 0.5rem;
+			line-height: 1.5;
 		}
 
 		.welcomeSubtitle {
