--- a/src/app/components/pageSpecificComponents/pending/pendingMessagesTable.module.scss
+++ b/src/app/components/pageSpecificComponents/pending/pendingMessagesTable.module.scss
@@ -66,9 +66,13 @@
 			}
 
 			@media (hover: hover) {
-				&:hover:not(:has(.button:hover)) {
+				&:hover:not(:has(.action:hover)) {
 					background: var(--gradient-primary-lighter);
 					cursor: pointer;
+
+					&.editing {
+						cursor: default;
+					}
 				}
 			}
 
@@ -80,11 +84,16 @@
 				overflow-x: auto;
 				scrollbar-width: none; /* Firefox */
 				-ms-overflow-style: none; /* IE and Edge */
+				vertical-align: top;
 
 				&::-webkit-scrollbar {
 					width: 0;
 					height: 0;
 					background: transparent;
+				}
+
+				&:first-child {
+					font-weight: 600;
 				}
 
 				&.right {
@@ -99,6 +108,13 @@
 				}
 
 				&.content-cell {
+					.rte-wrapper {
+						display: flex;
+						flex-direction: column;
+						gap: 0.5rem;
+						max-width: 100%;
+					}
+
 					.parsed-content {
 						width: 100%;
 						white-space: normal;
@@ -129,7 +145,7 @@
 					font-weight: 600;
 				}
 
-				.button {
+				.action {
 					width: 80%;
 					cursor: pointer;
 					display: flex;
@@ -163,6 +179,58 @@
 
 					.icon {
 						font-size: 1rem;
+					}
+
+					&.disabled {
+						opacity: 0.5;
+						cursor: default;
+						pointer-events: none;
+					}
+				}
+
+				.buttons {
+					display: flex;
+					align-items: center;
+					justify-content: center;
+					gap: 1.5rem;
+
+					.button {
+						cursor: pointer;
+						height: 3.25rem;
+						display: flex;
+						align-items: center;
+						justify-content: center;
+						padding: 0 2.5rem;
+						font-size: 1.125rem;
+						color: var(--text-secondary);
+						text-decoration: none;
+						transition: all 0.2s ease-in-out;
+						font-weight: 500;
+						position: relative;
+						border-radius: var(--border-radius);
+						border: 2px solid transparent;
+						background: linear-gradient(
+									var(--background-secondary),
+									var(--background-secondary)
+								)
+								padding-box,
+							var(--gradient-primary) border-box;
+						box-shadow: 0.25rem 0.25rem 1rem rgba(0, 0, 0, 0.25);
+
+						span {
+							transition: transform 0.2s ease-in-out;
+							will-change: transform;
+						}
+
+						@media (hover: hover) {
+							&:hover {
+								transform: translateY(-0.125rem);
+								box-shadow: 0.375rem 0.375rem 1.5rem rgba(0, 0, 0, 0.25);
+								color: var(--color-primary);
+								background: var(--gradient-accessible) padding-box,
+									var(--gradient-primary) border-box;
+							}
+						}
 					}
 				}
 			}
