--- a/src/app/components/pageSpecificComponents/dashboard/contacts/contactsTable.module.scss
+++ b/src/app/components/pageSpecificComponents/dashboard/contacts/contactsTable.module.scss
@@ -3,17 +3,18 @@
 	border-collapse: separate;
 	overflow: hidden;
 	border-radius: var(--border-radius);
+	table-layout: fixed;
 
 	.sm {
-		min-width: 6rem;
+		width: 8rem;
 	}
 
 	.md {
-		max-width: 12rem;
+		width: 12rem;
 	}
 
 	.lrg {
-		max-width: 14rem;
+		width: 16rem;
 	}
 
 	thead {
@@ -80,5 +81,21 @@
 				}
 			}
 		}
+	}
+}
+
+.activity {
+	margin-top: 1rem;
+	min-height: 8rem;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	border: 2px solid var(--border-medium);
+	border-radius: var(--border-radius-sm);
+	background-color: var(--background-light);
+
+	p {
+		font-size: 1rem;
+		color: var(--text-secondary);
 	}
 }
