--- a/src/app/components/pageSpecificComponents/dashboard/contacts/contactsTable.module.scss
+++ b/src/app/components/pageSpecificComponents/dashboard/contacts/contactsTable.module.scss
@@ -5,6 +5,10 @@
 	border-radius: var(--border-radius);
 	table-layout: fixed;
 
+	&.inModal {
+		table-layout: auto;
+	}
+
 	.sm {
 		width: 8rem;
 	}
